# receipt-parser-server

./: .gitignore  .gitmodules  .password.enc  Dockerfile  Makefile  README.md  config.yml  index.rst  launcher.sh  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
cert/: server.csr.cnf
data/stats/: stats.csv
docs/: GettingStarted.md  api.rst  config.rst  index.rst  installation.rst
receipt_manager_server/: __init__.py  server.py
src/: colors.py  receipt_printer.py  receipt_server.py  util.py
src/main/: server.py
src/main/parser/: importer.py  parse.py  receipt.py
src/main/server/: server.py
src/test/: client.py
util/: generate_certificate.sh  generate_token  generate_token.sh  launcher.sh
